# rest-fastapi

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: a.py  main.py
app/config/: database.py
app/controllers/: health_check.py
app/models/: user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: 1721621724_7b2367d485ed_initial.py
