[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Jose Gabriel Gonzalez <gabriel.gonzalez@zemoga.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
