[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Jose Gabriel Gonzalez <gabriel.gonzalez@zemoga.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
